--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,31 @@
-.App {
-  text-align: center;
+.editor-box{
+    width: 90%;
+    margin: 20px auto;
+    height: 500px;
+    overflow: hidden;
+    border: 1px solid #d5d4d7;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.editor-header{
+    width: 100%;
+    height: 30px;
+    border-bottom: 1px solid#d5d4d7;
+    background: #eff1f3;
+    color: #a3988e;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.editor-header .editor-header-btn{
+    display: inline-block;
+    height: 100%;
+    line-height: 30px;
+    text-align: center;
+    width: 100px;
+    cursor: pointer;
 }
-
-.App-link {
-  color: #61dafb;
+.editor-header .editor-header-btn:hover,.editor-header .selected{
+    color:#3b87c9;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.editor-content{
+    width: 100%;
+    height: 470px;
+    overflow-y: scroll;
+    padding: 10px;
 }
